--- a/public/backend/css/style.css
+++ b/public/backend/css/style.css
@@ -8632,3 +8632,6 @@ body.md-skin {
 .custom tbody  > tr .check{
     border-left: 1px solid #e7eaec !important; 
 }
+td.delete{
+    width: 60px;
+}
